Add index to external link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link" href="#photo">FOTOGRAFÍA PROFESIONAL</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/gallery">GALERÍA</a>
+                              <a class="nav-link" href="/gallery/index.html">GALERÍA</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#video">VIDEO</a>
