Add changes to this date 29/05/54

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
         <!-- Generate the header section with a responsive navbar -->
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2 border-bottom border-body fixed-top" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2 border-bottom border-body" data-bs-theme="dark">
                 <div class="container">
                     <a class="navbar-brand" href="/"><img src="img/logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,12 +67,6 @@
         <main>
           <!-- Carrousel/Home Section-->
           <section>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <br>
             <div class="container fluid">
               <div class="row">
@@ -265,8 +259,8 @@
             <br><br>
          
               <!-- Contact Section Form-->
-              <div class="row justify-content-center">
-                  <div class="col-lg-4 col-xl-5">
+              <div class="row justify-content">
+                  <div class="col-lg-2 col-xl-5">
                       <!-- * * * * * * * * * * * * * * *-->
                       <!-- * * SB Forms Contact Form * *-->
                       <!-- * * * * * * * * * * * * * * *-->
@@ -316,7 +310,7 @@
                           <button class="btn btn-dark btn-xl" id="submitButton" type="submit">Enviar</button>
                       </form>
                   </div>
-                  <div class="col-lg-2 align-middle">
+                  <div class="col-lg-2">
                     <br />
                     <br />
                     <br />
