--- a/gallery/index.html
+++ b/gallery/index.html
@@ -44,64 +44,64 @@
       }'>
       // Add an html comment
 
-        <a href="DJI_0004-min.jpg" data-ngthumb="DJI_0004-min.jpg" data-ngdesc="">DJI_0004-min</a>
-        <a href="DJI_0012-min.jpg" data-ngthumb="DJI_0012-min.jpg" data-ngdesc="">DJI_0012-min</a>
-        <a href="DJI_0119-min.jpg" data-ngthumb="DJI_0119-min.jpg" data-ngdesc="">DJI_0119-min</a>
-        <a href="DJI_0129-min.jpg" data-ngthumb="DJI_0129-min.jpg" data-ngdesc="">DJI_0129-min</a>
-        <a href="DSC_0044-min.jpg" data-ngthumb="DSC_0044-min.jpg" data-ngdesc="">DSC_0044-min</a>
-        <a href="DSC_0073-min.jpg" data-ngthumb="DSC_0073-min.jpg" data-ngdesc="">DSC_0073-min</a>
-        <a href="DSC_0130-min.jpg" data-ngthumb="DSC_0130-min.jpg" data-ngdesc="">DSC_0130-min</a>
-        <a href="DSC_0213-min.jpg" data-ngthumb="DSC_0213-min.jpg" data-ngdesc="">DSC_0213-min</a>
-        <a href="DSC_0216-min.jpg" data-ngthumb="DSC_0216-min.jpg" data-ngdesc="">DSC_0216-min</a>
-        <a href="DSC_0217-min.jpg" data-ngthumb="DSC_0217-min.jpg" data-ngdesc="">DSC_0217-min</a>
-        <a href="DSC_0232-min.jpg" data-ngthumb="DSC_0232-min.jpg" data-ngdesc="">DSC_0232-min</a>
-        <a href="DSC_0274-min.jpg" data-ngthumb="DSC_0274-min.jpg" data-ngdesc="">DSC_0274-min</a>
-        <a href="DSC_0428-min.jpg" data-ngthumb="DSC_0428-min.jpg" data-ngdesc="">DSC_0428-min</a>
-        <a href="DSC_0469-min.jpg" data-ngthumb="DSC_0469-min.jpg" data-ngdesc="">DSC_0469-min</a>
-        <a href="DSC_0485-min.jpg" data-ngthumb="DSC_0485-min.jpg" data-ngdesc="">DSC_0485-min</a>
-        <a href="DSC_0501-min.jpg" data-ngthumb="DSC_0501-min.jpg" data-ngdesc="">DSC_0501-min</a>
-        <a href="OPG_0368-min.jpg" data-ngthumb="OPG_0368-min.jpg" data-ngdesc="">OPG_0368-min</a>
-        <a href="OPG_0430-min.jpg" data-ngthumb="OPG_0430-min.jpg" data-ngdesc="">OPG_0430-min</a>
-        <a href="OPG_0575-min.jpg" data-ngthumb="OPG_0575-min.jpg" data-ngdesc="">OPG_0575-min</a>
-        <a href="OPG_0585-min.jpg" data-ngthumb="OPG_0585-min.jpg" data-ngdesc="">OPG_0585-min</a>
-        <a href="OPG_0596-min.jpg" data-ngthumb="OPG_0596-min.jpg" data-ngdesc="">OPG_0596-min</a>
-        <a href="OPG_0619-min.jpg" data-ngthumb="OPG_0619-min.jpg" data-ngdesc="">OPG_0619-min</a>
-        <a href="OPG_0633-min.jpg" data-ngthumb="OPG_0633-min.jpg" data-ngdesc="">OPG_0633-min</a>
-        <a href="OPG_0638-min.jpg" data-ngthumb="OPG_0638-min.jpg" data-ngdesc="">OPG_0638-min</a>
-        <a href="OPG_5731-min.jpg" data-ngthumb="OPG_5731-min.jpg" data-ngdesc="">OPG_5731-min</a>
-        <a href="OPG_5757-min.jpg" data-ngthumb="OPG_5757-min.jpg" data-ngdesc="">OPG_5757-min</a>
-        <a href="OPG_5795-min.jpg" data-ngthumb="OPG_5795-min.jpg" data-ngdesc="">OPG_5795-min</a>
-        <a href="OPG_5902-min.jpg" data-ngthumb="OPG_5902-min.jpg" data-ngdesc="">OPG_5902-min</a>
-        <a href="OPG_6215-min.jpg" data-ngthumb="OPG_6215-min.jpg" data-ngdesc="">OPG_6215-min</a>
-        <a href="OPG_6224-min.jpg" data-ngthumb="OPG_6224-min.jpg" data-ngdesc="">OPG_6224-min</a>
-        <a href="OPG_6273-min.jpg" data-ngthumb="OPG_6273-min.jpg" data-ngdesc="">OPG_6273-min</a>
-        <a href="OPG_6452-min.jpg" data-ngthumb="OPG_6452-min.jpg" data-ngdesc="">OPG_6452-min</a>
-        <a href="OPG_6550-min.jpg" data-ngthumb="OPG_6550-min.jpg" data-ngdesc="">OPG_6550-min</a>
-        <a href="OPG_6778-min.jpg" data-ngthumb="OPG_6778-min.jpg" data-ngdesc="">OPG_6778-min</a>
-        <a href="OPG_6787-min.jpg" data-ngthumb="OPG_6787-min.jpg" data-ngdesc="">OPG_6787-min</a>
-        <a href="OPG_6804-min.jpg" data-ngthumb="OPG_6804-min.jpg" data-ngdesc="">OPG_6804-min</a>
-        <a href="OPG_6815-min.jpg" data-ngthumb="OPG_6815-min.jpg" data-ngdesc="">OPG_6815-min</a>
-        <a href="OPG_7548-min.jpg" data-ngthumb="OPG_7548-min.jpg" data-ngdesc="">OPG_7548-min</a>
-        <a href="OPG_7578-min.jpg" data-ngthumb="OPG_7578-min.jpg" data-ngdesc="">OPG_7578-min</a>
-        <a href="OPG_7588-min.jpg" data-ngthumb="OPG_7588-min.jpg" data-ngdesc="">OPG_7588-min</a>
-        <a href="OPG_7599-min.jpg" data-ngthumb="OPG_7599-min.jpg" data-ngdesc="">OPG_7599-min</a>
-        <a href="OPG_7833-min.jpg" data-ngthumb="OPG_7833-min.jpg" data-ngdesc="">OPG_7833-min</a>
-        <a href="OPG_8040-min.jpg" data-ngthumb="OPG_8040-min.jpg" data-ngdesc="">OPG_8040-min</a>
-        <a href="OPG_8069-min.jpg" data-ngthumb="OPG_8069-min.jpg" data-ngdesc="">OPG_8069-min</a>
-        <a href="OPG_8079-min.jpg" data-ngthumb="OPG_8079-min.jpg" data-ngdesc="">OPG_8079-min</a>
-        <a href="OPG_8080-min.jpg" data-ngthumb="OPG_8080-min.jpg" data-ngdesc="">OPG_8080-min</a>
-        <a href="OPG_8088-min.jpg" data-ngthumb="OPG_8088-min.jpg" data-ngdesc="">OPG_8088-min</a>
-        <a href="OPG_8117-min.jpg" data-ngthumb="OPG_8117-min.jpg" data-ngdesc="">OPG_8117-min</a>
-        <a href="OPG_8306-min.jpg" data-ngthumb="OPG_8306-min.jpg" data-ngdesc="">OPG_8306-min</a>
-        <a href="OPG_8341-min.jpg" data-ngthumb="OPG_8341-min.jpg" data-ngdesc="">OPG_8341-min</a>
-        <a href="OPG_8354-min.jpg" data-ngthumb="OPG_8354-min.jpg" data-ngdesc="">OPG_8354-min</a>
-        <a href="OPG_8371-min.jpg" data-ngthumb="OPG_8371-min.jpg" data-ngdesc="">OPG_8371-min</a>
-        <a href="OPG_8447-min.jpg" data-ngthumb="OPG_8447-min.jpg" data-ngdesc="">OPG_8447-min</a>
-        <a href="OPG_8488-min.jpg" data-ngthumb="OPG_8488-min.jpg" data-ngdesc="">OPG_8488-min</a>
-        <a href="OPG_8579-min.jpg" data-ngthumb="OPG_8579-min.jpg" data-ngdesc="">OPG_8579-min</a>
-        <a href="OPG_8683-min.jpg" data-ngthumb="OPG_8683-min.jpg" data-ngdesc="">OPG_8683-min</a>
-        <a href="OPG_8688-min.jpg" data-ngthumb="OPG_8688-min.jpg" data-ngdesc="">OPG_8688-min</a>
-        <a href="OPG_8692-min.jpg" data-ngthumb="OPG_8692-min.jpg" data-ngdesc="">OPG_8692-min</a>
+      <a href="DJI_0004-min.jpg" data-ngthumb="DJI_0004-min.jpg" data-ngdesc=""></a>
+      <a href="DJI_0012-min.jpg" data-ngthumb="DJI_0012-min.jpg" data-ngdesc=""></a>
+      <a href="DJI_0119-min.jpg" data-ngthumb="DJI_0119-min.jpg" data-ngdesc=""></a>
+      <a href="DJI_0129-min.jpg" data-ngthumb="DJI_0129-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0044-min.jpg" data-ngthumb="DSC_0044-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0073-min.jpg" data-ngthumb="DSC_0073-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0130-min.jpg" data-ngthumb="DSC_0130-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0213-min.jpg" data-ngthumb="DSC_0213-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0216-min.jpg" data-ngthumb="DSC_0216-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0217-min.jpg" data-ngthumb="DSC_0217-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0232-min.jpg" data-ngthumb="DSC_0232-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0274-min.jpg" data-ngthumb="DSC_0274-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0428-min.jpg" data-ngthumb="DSC_0428-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0469-min.jpg" data-ngthumb="DSC_0469-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0485-min.jpg" data-ngthumb="DSC_0485-min.jpg" data-ngdesc=""></a>
+      <a href="DSC_0501-min.jpg" data-ngthumb="DSC_0501-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0368-min.jpg" data-ngthumb="OPG_0368-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0430-min.jpg" data-ngthumb="OPG_0430-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0575-min.jpg" data-ngthumb="OPG_0575-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0585-min.jpg" data-ngthumb="OPG_0585-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0596-min.jpg" data-ngthumb="OPG_0596-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0619-min.jpg" data-ngthumb="OPG_0619-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0633-min.jpg" data-ngthumb="OPG_0633-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_0638-min.jpg" data-ngthumb="OPG_0638-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_5731-min.jpg" data-ngthumb="OPG_5731-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_5757-min.jpg" data-ngthumb="OPG_5757-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_5795-min.jpg" data-ngthumb="OPG_5795-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_5902-min.jpg" data-ngthumb="OPG_5902-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6215-min.jpg" data-ngthumb="OPG_6215-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6224-min.jpg" data-ngthumb="OPG_6224-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6273-min.jpg" data-ngthumb="OPG_6273-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6452-min.jpg" data-ngthumb="OPG_6452-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6550-min.jpg" data-ngthumb="OPG_6550-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6778-min.jpg" data-ngthumb="OPG_6778-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6787-min.jpg" data-ngthumb="OPG_6787-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6804-min.jpg" data-ngthumb="OPG_6804-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_6815-min.jpg" data-ngthumb="OPG_6815-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_7548-min.jpg" data-ngthumb="OPG_7548-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_7578-min.jpg" data-ngthumb="OPG_7578-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_7588-min.jpg" data-ngthumb="OPG_7588-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_7599-min.jpg" data-ngthumb="OPG_7599-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_7833-min.jpg" data-ngthumb="OPG_7833-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8040-min.jpg" data-ngthumb="OPG_8040-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8069-min.jpg" data-ngthumb="OPG_8069-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8079-min.jpg" data-ngthumb="OPG_8079-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8080-min.jpg" data-ngthumb="OPG_8080-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8088-min.jpg" data-ngthumb="OPG_8088-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8117-min.jpg" data-ngthumb="OPG_8117-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8306-min.jpg" data-ngthumb="OPG_8306-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8341-min.jpg" data-ngthumb="OPG_8341-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8354-min.jpg" data-ngthumb="OPG_8354-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8371-min.jpg" data-ngthumb="OPG_8371-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8447-min.jpg" data-ngthumb="OPG_8447-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8488-min.jpg" data-ngthumb="OPG_8488-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8579-min.jpg" data-ngthumb="OPG_8579-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8683-min.jpg" data-ngthumb="OPG_8683-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8688-min.jpg" data-ngthumb="OPG_8688-min.jpg" data-ngdesc=""></a>
+      <a href="OPG_8692-min.jpg" data-ngthumb="OPG_8692-min.jpg" data-ngdesc=""></a>
     </div>
     
   </body>
